fix(popup): removed container div positioning causing z-index issues
Related to #408

--- a/src/assets/properties-panel.css
+++ b/src/assets/properties-panel.css
@@ -1266,12 +1266,6 @@ textarea.bio-properties-panel-input {
   display: flex;
 }
 
-.bio-properties-panel-popup-container {
-  z-index: var(--z-feel-editor);
-  position: fixed;
-  top: 0;
-  left: 0;
-}
 
 .bio-properties-panel-popup {
   --popup-background-color: hsla(0, 0%, 96%, 1);
